# tmbd-recomender

./: .gitignore  pyproject.toml
notebook/: notebook80e330e489.ipynb
tmbd_recomendation/: app.py
